<resources>
    <string name="app_name">SCP UEM</string>
    <string name="tab_text_1">Pago</string>
    <string name="tab_text_2">Pendente</string>
    <string name="sing_in">Entrar</string>
    <string name="institutional_email">Email institucional</string>
    <string name="password">Palavra-passe</string>
    <string name="sign_up_for_an_account">CRIAR CONTA?</string>
    <string name="sign_in_to_continue">Inicie sessão para continuar</string>
    <string name="welcome_to_scp_uem">Bem-vindo a SCP-UEM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Palavra-passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="subscription">Incrição</string>
    <string name="student_id">Código do estudante</string>
    <string name="full_name">Nome completo</string>
    <string name="phone_number">Telefone</string>
    <string name="laboral">Laboral</string>
    <string name="pos_laboral">Pos-Laboral</string>
    <string name="turno">Turno</string>
    <string name="student_type">Tipo de estudante</string>
    <string name="full_time">Tempo inteiro</string>
    <string name="part_time">Tempo parcial</string>
    <string name="nationality">Nacionalidade</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="i">I</string>
    <string name="ii">II</string>
    <string name="iii">III</string>
    <string name="iv">IV</string>
    <string name="academic_level">Ano Académico</string>
    <string name="subject_name">Nome da disciplina</string>
    <string name="mozambican">Moçambicana</string>
    <string name="foreign">Estrageiro</string>
    <string name="year_i">Ano I</string>
    <string name="year_iv">Ano IV</string>
    <string name="year_iii">Ano III</string>
    <string name="year_ii">Ano II</string>
    <string name="home">Home</string>
    <string name="entity">Entidade</string>
    <string name="reference">Referência</string>
    <string name="amount">Valor</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="title_home">Home</string>
    <string name="close">Fechar</string>
    <string name="date">Data</string>
    <string name="payment_info">Info do pagamento</string>
    <string name="gender">Sexo</string>
    <string name="erro_ao_registar">Erro ao registar</string>
    <string name="n_o_foi_poss_vel_registar_sua_inscri_o_por_n_o_ter_aprovado_as_cadeiras_precentes_verifique_a_tabela_de_preced_ncias_e_selecione_apenas_as_cadeiras_autorizadas_para_prosseguir_com_a_inscri_o">Não foi possível registar sua inscrição, por não ter aprovado as cadeiras precentes, verifique a tabela de precedências e selecione apenas as cadeiras autorizadas para prosseguir com a inscrição.</string>
</resources>