<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.001dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:text="@string/entity"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/entity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.001dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:text="@string/reference"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.001dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>